--- a/index.html
+++ b/index.html
@@ -1,11 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swoopt Guide</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="style.css" />
+		<title>Swoopt Guide</title>
+	</head>
+	<body>
+        <h1 style="display: none;touch-action: none;">Swoopt Starter Guide in Steps</h1>
+		<div class="swoopt-icon">
+			<img
+				src="assets/Swoopt-icon.png"
+				alt="Swoopt App Icon" />
+			<p>Swoopt</p>
+		</div>
+
+		<div class="pages">
+			<div class="page-1" id="step-1">
+				<div class="content">
+					<p class="big">VÄLKOMMEN!</p>
+					<p>
+						In the next 5 minutes, you will learn everything you
+						need to become a guru with Swoopt!
+					</p>
+                    <button>KÖR!</button>
+				</div>
+			</div>
+			<div class="page-2" id="step-2">
+				<div class="content">
+					<h2>DOWNLOAD THE SWOOPT APP</h2>
+					<ol class="steps">
+						<li>
+							<p>Open the App Store on your mobile phone</p>
+							<div class="icons">
+								<img
+									src="assets/Google_Play_2022_icon.svg"
+									alt="Google Play Icon" />
+								<img
+									src="assets/App_Store_(iOS).svg"
+									alt="Apple App Store Icon" />
+							</div>
+						</li>
+
+						<li>Search for the "Swoopt" App</li>
+						<li>Download the Swoopt App to your mobile phone</li>
+					</ol>
+				</div>
+				<nav>
+					<ul>
+						<li>
+							<button> &lt; TILLBAKA </button>
+						</li>
+						<li>
+							<button>NÄSTA &gt;</button>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<div class="page-3" id="step-3">
+				<div class="content">
+					<h1>REGISTER IN THE SWOOPT APP</h1>
+
+					<ol class="steps">
+						<li>
+							<p>On your mobile phone, launch the Swoopt App</p>
+							<div class="swoopt-app-icon">
+								<img
+									src="assets/Swoopt-icon.png"
+									alt="Swoopt App Icon" />
+								<p>Swoopt</p>
+							</div>
+						</li>
+						<li>Rego process to update here...</li>
+						<li>TBC...</li>
+					</ol>
+				</div>
+				<nav>
+					<ul>
+						<li>
+							<button> &lt; TILLBAKA </button>
+						</li>
+						<li>
+							<button>NÄSTA &gt;</button>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<div class="page-4" id="step-4">
+				<div class="content">
+					<h1>CHECK "MY BUSINESS PROFILE"</h1>
+
+					<ol class="steps">
+						<li>
+							<p>In the top-right corner, tap on "Settings"</p>
+							<img
+								class="setting-icon"
+								src="assets/Settings-icon.png"
+								alt="Setting Icon In Swoopt App" />
+						</li>
+						<li>
+							Confirm that all of your businesses are displaying
+						</li>
+						<li>
+							If one or more of your businesses is not displaying,
+							email us at info@swoopt.app
+						</li>
+					</ol>
+				</div>
+				<nav>
+					<ul>
+						<li>
+							<button> &lt; TILLBAKA </button>
+						</li>
+						<li>
+							<button>NÄSTA &gt;</button>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<div class="page-5" id="step-5">
+				<div class="wrapper">
+					<div class="content">
+						<h2>CREATE YOUR FIRST OFFER(S)</h2>
+
+						<ol class="steps">
+							<li>In Settings, tap on "MY MARKETING"</li>
+							<li>Tap on "+ Create New"</li>
+							<li>
+								Fill in the required fields (see tips below):
+								<p>
+									Heading: <br />
+									Sub-heading: <br />
+									Villkor: <br />
+									Inlösningar: <br />Est. Savings: <br />
+									Startdatum: <br />
+									Utgångsdatum: <br />Streckkod:
+								</p>
+							</li>
+							<li>
+								If you have more than one launch offer, follow
+								the steps above for each offer
+							</li>
+						</ol>
+					</div>
+
+					<div class="image">
+						<img
+							src="assets/screenshot-1.png"
+							alt="" />
+					</div>
+				</div>
+
+				<nav>
+					<ul>
+						<li>
+							<button> &lt; TILLBAKA </button>
+						</li>
+						<li>
+							<button>NÄSTA &gt;</button>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<div class="page-6" id="step-6">
+				<div class="wrapper">
+					<div class="content">
+						<h2>MY STATISTICS (EXPLAINED)</h2>
+
+						<ol class="steps">
+							<li>In Settings, tap on "MY STATISTICS"
+                            </li>
+							<li>Fill in the required fields (see tips below):</li>
+							<li>
+								Fill in the required fields (see tips below):
+							</li>
+							<li>
+								If you have more than one launch offer, follow the steps
+                                above for each offer
+							</li>
+						</ol>
+					</div>
+
+					<div class="image">
+						<img
+							src="assets/screenshot-2.png"
+							alt="" />
+					</div>
+				</div>
+
+				<nav>
+					<ul>
+						<li>
+							<button> &lt; TILLBAKA </button>
+						</li>
+						<li>
+							<button>NÄSTA &gt;</button>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<div class="page-7" id="step-7">
+                <div class="content">
+                    <p class="big">GRATTIS!
+                    </p>
+                    <p>Now you are ready to grow your business with Swoopt!</p>
+                    <button>OK</button>
+                </div>
+			</div>
+		</div>
+	</body>
 </html>
