Scroll Behavior Added

--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
 		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com" />
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+			rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="font.css" />
+		<link
 			rel="stylesheet"
 			href="style.css" />
 		<title>Swoopt Guide</title>
 	</head>
 	<body>
-        <h1 style="display: none;touch-action: none;">Swoopt Starter Guide in Steps</h1>
+		<h1 style="display: none; touch-action: none">
+			Swoopt Starter Guide in Steps
+		</h1>
 		<div class="swoopt-icon">
 			<img
 				src="assets/Swoopt-icon.png"
@@ -20,17 +35,27 @@
 		</div>
 
 		<div class="pages">
-			<div class="page-1" id="step-1">
+			<div
+				class="page-1"
+				id="step-1">
 				<div class="content">
 					<p class="big">VÄLKOMMEN!</p>
 					<p>
 						In the next 5 minutes, you will learn everything you
 						need to become a guru with Swoopt!
 					</p>
-                    <button>KÖR!</button>
+
+					<a
+						class="button"
+						tabindex="0"
+						href="#step-2"
+						>KÖR!</a
+					>
 				</div>
 			</div>
-			<div class="page-2" id="step-2">
+			<div
+				class="page-2"
+				id="step-2">
 				<div class="content">
 					<h2>DOWNLOAD THE SWOOPT APP</h2>
 					<ol class="steps">
@@ -53,15 +78,27 @@
 				<nav>
 					<ul>
 						<li>
-							<button> &lt; TILLBAKA </button>
+							<a
+								class="button"
+								tabindex="0"
+								href="#step-1"
+								>&lt; TILLBAKA</a
+							>
 						</li>
 						<li>
-							<button>NÄSTA &gt;</button>
+							<a
+								class="button"
+								tabindex="0"
+								href="#step-3"
+								>NÄSTA &gt;</a
+							>
 						</li>
 					</ul>
 				</nav>
 			</div>
-			<div class="page-3" id="step-3">
+			<div
+				class="page-3"
+				id="step-3">
 				<div class="content">
 					<h1>REGISTER IN THE SWOOPT APP</h1>
 
@@ -82,15 +119,27 @@
 				<nav>
 					<ul>
 						<li>
-							<button> &lt; TILLBAKA </button>
+							<a
+								class="button"
+								tabindex="0"
+								href="#step-2"
+								>&lt; TILLBAKA</a
+							>
 						</li>
 						<li>
-							<button>NÄSTA &gt;</button>
+							<a
+								class="button"
+								tabindex="0"
+								href="#step-4"
+								>NÄSTA &gt;</a
+							>
 						</li>
 					</ul>
 				</nav>
 			</div>
-			<div class="page-4" id="step-4">
+			<div
+				class="page-4"
+				id="step-4">
 				<div class="content">
 					<h1>CHECK "MY BUSINESS PROFILE"</h1>
 
@@ -114,15 +163,27 @@
 				<nav>
 					<ul>
 						<li>
-							<button> &lt; TILLBAKA </button>
+							<a
+								class="button"
+								tabindex="0"
+								href="#step-3"
+								>&lt; TILLBAKA</a
+							>
 						</li>
 						<li>
-							<button>NÄSTA &gt;</button>
+							<a
+								class="button"
+								tabindex="0"
+								href="#step-5"
+								>NÄSTA &gt;</a
+							>
 						</li>
 					</ul>
 				</nav>
 			</div>
-			<div class="page-5" id="step-5">
+			<div
+				class="page-5"
+				id="step-5">
 				<div class="wrapper">
 					<div class="content">
 						<h2>CREATE YOUR FIRST OFFER(S)</h2>
@@ -158,29 +219,42 @@
 				<nav>
 					<ul>
 						<li>
-							<button> &lt; TILLBAKA </button>
+							<a
+								class="button"
+								tabindex="0"
+								href="#step-4"
+								>&lt; TILLBAKA</a
+							>
 						</li>
 						<li>
-							<button>NÄSTA &gt;</button>
+							<a
+								class="button"
+								tabindex="0"
+								href="#step-6"
+								>NÄSTA &gt;</a
+							>
 						</li>
 					</ul>
 				</nav>
 			</div>
-			<div class="page-6" id="step-6">
+			<div
+				class="page-6"
+				id="step-6">
 				<div class="wrapper">
 					<div class="content">
 						<h2>MY STATISTICS (EXPLAINED)</h2>
 
 						<ol class="steps">
-							<li>In Settings, tap on "MY STATISTICS"
-                            </li>
-							<li>Fill in the required fields (see tips below):</li>
+							<li>In Settings, tap on "MY STATISTICS"</li>
 							<li>
 								Fill in the required fields (see tips below):
 							</li>
 							<li>
-								If you have more than one launch offer, follow the steps
-                                above for each offer
+								Fill in the required fields (see tips below):
+							</li>
+							<li>
+								If you have more than one launch offer, follow
+								the steps above for each offer
 							</li>
 						</ol>
 					</div>
@@ -195,21 +269,38 @@
 				<nav>
 					<ul>
 						<li>
-							<button> &lt; TILLBAKA </button>
+							<a
+								class="button"
+								tabindex="0"
+								href="#step-5"
+								>&lt; TILLBAKA</a
+							>
 						</li>
 						<li>
-							<button>NÄSTA &gt;</button>
+							<a
+								class="button"
+								tabindex="0"
+								href="#step-7"
+								>NÄSTA &gt;</a
+							>
 						</li>
 					</ul>
 				</nav>
 			</div>
-			<div class="page-7" id="step-7">
-                <div class="content">
-                    <p class="big">GRATTIS!
-                    </p>
-                    <p>Now you are ready to grow your business with Swoopt!</p>
-                    <button>OK</button>
-                </div>
+			<div
+				class="page-7"
+				id="step-7">
+				<div class="content">
+					<p class="big">GRATTIS!</p>
+					<p>Now you are ready to grow your business with Swoopt!</p>
+
+					<a
+						class="button"
+						tabindex="0"
+						href="#step-1"
+						>OK</a
+					>
+				</div>
 			</div>
 		</div>
 	</body>
