--- a/index.html
+++ b/index.html
@@ -303,5 +303,11 @@
 				</div>
 			</div>
 		</div>
+
+        <script>
+            window.addEventListener("resize", () => {
+                location.reload()
+            })
+        </script>
 	</body>
 </html>
