--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Swoopt Starter Guide in Steps" />
+		<meta
+			name="author"
+			content="Swoopt" />
 		<link
 			rel="preconnect"
 			href="https://fonts.googleapis.com" />
@@ -21,6 +27,10 @@
 		<link
 			rel="stylesheet"
 			href="style.css" />
+		<link
+			rel="shortcut icon"
+			href="assets/Swoopt-icon.png"
+			type="image/x-icon" />
 		<title>Swoopt Guide</title>
 	</head>
 	<body>
@@ -212,7 +222,7 @@
 					<div class="image">
 						<img
 							src="assets/screenshot-1.png"
-							alt="" />
+							alt="Screenshot of Swoopt App Interface" />
 					</div>
 				</div>
 
@@ -262,7 +272,7 @@
 					<div class="image">
 						<img
 							src="assets/screenshot-2.png"
-							alt="" />
+							alt="Screenshot of Swoopt App Interface" />
 					</div>
 				</div>
 
@@ -304,10 +314,10 @@
 			</div>
 		</div>
 
-        <script>
-            window.addEventListener("resize", () => {
-                location.reload()
-            })
-        </script>
+		<script>
+			window.addEventListener("resize", () => {
+				location.reload();
+			});
+		</script>
 	</body>
 </html>
